--- a/iDM-freze-out/Coannihilation.ipynb
+++ b/iDM-freze-out/Coannihilation.ipynb
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ade44e2c",
+   "id": "8e8603d5",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b81f4600",
+   "id": "500b8ca2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e23f0380",
+   "id": "d07799e8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "d83d70c8",
+   "id": "1bf67030",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "c1e4aa7a",
+   "id": "29b3786a",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "236749cc",
+   "id": "3e17b3d5",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "21bda682",
+   "id": "223c7c2a",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "9c42b173",
+   "id": "17d91306",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "8d812dbd",
+   "id": "12e8493f",
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a135ec0c",
+   "id": "d274af44",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9891fb4",
+   "id": "bbd3b146",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1023,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e33c1363",
+   "id": "8210f14e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1031,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afa8709c",
+   "id": "f2e878fa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bc21d59",
+   "id": "d8a70796",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1047,14 +1047,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a528ad4",
+   "id": "115e2a36",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d95eefb9",
+   "id": "1a4a705b",
    "metadata": {},
    "source": [
     "$$x_f= \\ln [0.038(n+1)(g/g_*^{1/2}) m_{Pl}m \\sigma_0]- \\Big( n+ \\frac{1}{2} \\Big) \\ln \\{\\ln[0.038(n+1)(g/g_*^{1/2}) m_{Pl}m \\sigma_0] \\}$$"
@@ -1062,14 +1062,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5800a315",
+   "id": "1b9ae835",
    "metadata": {},
    "source": [
-    "### I have shifted the s0 because sigma(s0) is WAY more different (7 order of magnitude) respect to a value nearby and still into the range (s0, Energy max) .\n",
+    "### I have shifted the s0 because 'sigma(s0)' is WAY more different (7 order of magnitude) respect to a value nearby and still into the range (s0, Energy max) .\n",
     "### Energy max is (E1+E2)^2 considering the max velocity for iDM of 0.1c \n",
     "### The shift is of 0.00003........ Can we make a better assumption?\n",
     "### Actually I don't think that consider s0=(m1+m2)^2 is a great assumption. \n",
-    "### How could be possible that the two iDM candidate find themself at rest?!?!!"
+    "### How could be possible that the two iDM candidate find themself at rest?!?!"
    ]
   },
   {
@@ -1097,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "eeef7cda",
+   "id": "053aba2c",
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "4a79b95f",
+   "id": "70594df5",
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "49dc031d",
+   "id": "58c3a4e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "a0869f48",
+   "id": "a34e1744",
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "bd62b9bb",
+   "id": "511602bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "dadb0e91",
+   "id": "9d11af89",
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "5d628ca6",
+   "id": "1b437fa1",
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "d6954b53",
+   "id": "e6ba735d",
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "b6d84ce5",
+   "id": "372260ca",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1c2f75d",
+   "id": "f8749800",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1308,7 +1308,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "f4f11026",
+   "id": "f205bce4",
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c01c235",
+   "id": "ccd14a2f",
    "metadata": {},
    "source": [
     "$$E_2 \\approx E_1= \\sqrt{m_1^2+ p_1^2}=\\sqrt{(0.05)^2+ (0.05 \\gamma 0.1c)^2}=\\sqrt{(0.05)^2+ (0.05 \\frac{1}{\\sqrt{1-(0.1)^2}} 0.1c)^2}$$"
@@ -1343,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "46f2d3d1",
+   "id": "643de5a5",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "acc7cbe5",
+   "id": "31e19011",
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "b60b0775",
+   "id": "cdef4d3f",
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1410,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "95607315",
+   "id": "9a110c9e",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "67696e19",
+   "id": "7e3f556a",
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "85763433",
+   "id": "c4447db0",
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55a8ff56",
+   "id": "09dda3c1",
    "metadata": {},
    "source": [
     "$$1 \\text{cm}= 5.068 \\times 10^{13} \\hbar c \\cdot \\text{GeV}^{-1}\n",
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0ddd49a",
+   "id": "d515a9e5",
    "metadata": {},
    "source": [
     "$$\\frac{cm^3}{s}=\\frac{(5.068 \\times 10^{13} \\hbar c \\cdot \\text{GeV}^{-1})^3}{1.519 \\times 10^{24} \\hbar \\cdot \\text{GeV}^{-1}}= 8.569432 \\times 10^{16} \\text{GeV}^{-2} $$"
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5e536db",
+   "id": "cf3626ef",
    "metadata": {},
    "source": [
     "$$\\text{GeV}^{-2}=0.11669385 \\times 10^{-16} \\frac{cm^3}{s}= 1.1669385 \\times 10^{-17} \\frac{cm^3}{s}$$"
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "d6e27306",
+   "id": "90400ddb",
    "metadata": {},
    "outputs": [
     {
@@ -1536,10 +1536,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6227fb5a",
+   "id": "0924ae9d",
    "metadata": {},
    "source": [
     "$$\\langle \\sigma v \\rangle= 0.0005992953367809461 \\ \\text{GeV}^{-2}= 6.846779816983444 \\times 10^{-22} \\frac{cm^3}{s} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3955a2b",
+   "metadata": {},
+   "source": [
+    "## MAKE SENSE?!"
    ]
   }
  ],
