--- a/iDM-freze-out/Scattering.ipynb
+++ b/iDM-freze-out/Scattering.ipynb
@@ -1344,6 +1344,52 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "736be745",
+   "metadata": {},
+   "source": [
+    "$$K_B=8.617333 \\times 10^{-5} eV \\ K^{-1} \\ \\ \\ \\ \\ \\ E=\\frac{1}{2}K_B T$$\n",
+    "So you can express the temperature in function of the energy, actually $T \\approx E$\n",
+    "$$T=\\frac{2E}{K_B}$$ If the enrgy is on the MeV order $$T=\\frac{2 \\times 10^6 eV}{8.617333 \\times 10^{-5} eV \\ K^{-1}} \\approx 10^{10}K $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5981d15",
+   "metadata": {},
+   "source": [
+    "Now, let's say the thermal bath energy is on the order of the MeV, which is the average kinetic energy:\n",
+    "$$E= \\frac{1}{2}\\frac{p^2}{m} \\rightarrow p=\\sqrt{\\frac{2 E}{m}}$$\n",
+    "$$p=m \\gamma v \\rightarrow \\gamma v= \\frac{1}{m} \\sqrt{\\frac{2 E}{m}} $$\n",
+    "Squaring everithing\n",
+    "$$\\frac{1}{\\Big(1- \\frac{v^2}{c^2} \\Big)} v^2= \\frac{1}{m^2}\\Big(\\frac{2 E}{m}\\Big) \\Longrightarrow v^2= [\\frac{1}{m^2}\\Big(\\frac{2 E}{m}\\Big)]- \\frac{v^2}{c^2}[\\frac{1}{m^2}\\Big(\\frac{2 E}{m}\\Big)]$$\n",
+    "$$\\Longrightarrow v^2 \\Big(1+ \\frac{1}{c^2}[\\frac{1}{m^2}\\Big(\\frac{2 E}{m}\\Big)] \\Big)= [\\frac{1}{m^2}\\Big(\\frac{2 E}{m}\\Big)]$$\n",
+    "\n",
+    "$$v= \\sqrt \\frac{[\\frac{1}{m^2}\\Big(\\frac{2 E}{m}\\Big)]}{1+ \\frac{1}{c^2}[\\frac{1}{m^2}\\Big(\\frac{2 E}{m}\\Big)]}$$\n",
+    "If E=1 MeV\n",
+    "$$ \\frac{1}{c^2}[\\frac{1}{m^2}\\Big(\\frac{2 \\times 1MeV}{m}\\Big)]= [c=1?!?!?]= \\frac{1}{(50 MeV)^2} \\times \\frac{2 MeV}{50 MeV}=0.000016 MeV^{-2} $$\n",
+    "\n",
+    "$$\\Longrightarrow v=0.004 (\\times c?)$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c99c39c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#The upper converted into code:\n",
+    "Energy_of_bath=50    # MeV\n",
+    "mass_of_kindidate=50  #MeV\n",
+    "velocity_of_DM= np.sqrt((2*Energy_of_bath/mass_of_kindidate**3)/1+(2*Energy_of_bath/mass_of_kindidate**3))\n",
+    "velocity_of_DM\n",
+    "\n",
+    "# DM IS ALWAYS NON RELATIVISTIC WHEN DECOUPLE\n",
+    "# IN THE FOLLOWING COMPUTATION YOU SEE THAT THE KINETIC ENERGY IS NOT HIGH"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 217,
    "id": "b5804ed0",
