--- a/iDM-freze-out/Coannihilation.ipynb
+++ b/iDM-freze-out/Coannihilation.ipynb
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8e8603d5",
+   "id": "b5ad1cef",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "500b8ca2",
+   "id": "7c134a97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d07799e8",
+   "id": "04dc93b4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "1bf67030",
+   "id": "d4135fc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "29b3786a",
+   "id": "e5fe4519",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "3e17b3d5",
+   "id": "b723a88f",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "223c7c2a",
+   "id": "f2e1a8df",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "17d91306",
+   "id": "d0adf7ba",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "12e8493f",
+   "id": "988f427c",
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d274af44",
+   "id": "1c1beeb8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbd3b146",
+   "id": "4352637f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1023,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8210f14e",
+   "id": "609c3641",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1031,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2e878fa",
+   "id": "58e819a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8a70796",
+   "id": "26c1e77b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1047,14 +1047,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115e2a36",
+   "id": "b26a04e7",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1a4a705b",
+   "id": "f698d4f9",
    "metadata": {},
    "source": [
     "$$x_f= \\ln [0.038(n+1)(g/g_*^{1/2}) m_{Pl}m \\sigma_0]- \\Big( n+ \\frac{1}{2} \\Big) \\ln \\{\\ln[0.038(n+1)(g/g_*^{1/2}) m_{Pl}m \\sigma_0] \\}$$"
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b9ae835",
+   "id": "96da7a37",
    "metadata": {},
    "source": [
     "### I have shifted the s0 because 'sigma(s0)' is WAY more different (7 order of magnitude) respect to a value nearby and still into the range (s0, Energy max) .\n",
@@ -1097,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "053aba2c",
+   "id": "83876b3e",
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "70594df5",
+   "id": "27b8b251",
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "58c3a4e3",
+   "id": "1eb14512",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "a34e1744",
+   "id": "e196cc92",
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "511602bc",
+   "id": "3d7f66c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "9d11af89",
+   "id": "33d24ffc",
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "1b437fa1",
+   "id": "f5939722",
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "e6ba735d",
+   "id": "f375779e",
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "372260ca",
+   "id": "425da036",
    "metadata": {},
    "outputs": [
     {
@@ -1298,17 +1298,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8749800",
+   "cell_type": "markdown",
+   "id": "f563fceb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$$K_B=8.617333 \\times 10^{-5} eV \\ K^{-1} \\ \\ \\ \\ \\ \\ E=\\frac{1}{2}K_B T$$\n",
+    "So you can express the temperature in function of the energy, actually $T \\approx E$\n",
+    "$$T=\\frac{2E}{K_B}$$ If the enrgy is on the MeV order $$T=\\frac{2 \\times 10^6 eV}{8.617333 \\times 10^{-5} eV \\ K^{-1}} \\approx 10^{10}K $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "110c9c75",
+   "metadata": {},
+   "source": [
+    "Now, let's say the thermal bath energy is on the order of the MeV, which is the average kinetic energy:\n",
+    "$$E= \\frac{1}{2}\\frac{p^2}{m} \\rightarrow p=\\sqrt{\\frac{2 E}{m}}$$\n",
+    "$$p=m \\gamma v \\rightarrow \\gamma v= \\frac{1}{m} \\sqrt{\\frac{2 E}{m}} $$\n",
+    "Squaring everithing\n",
+    "$$\\frac{1}{\\Big(1- \\frac{v^2}{c^2} \\Big)} v^2= \\frac{1}{m^2}\\Big(\\frac{2 E}{m}\\Big) \\Longrightarrow v^2= [\\frac{1}{m^2}\\Big(\\frac{2 E}{m}\\Big)]- \\frac{v^2}{c^2}[\\frac{1}{m^2}\\Big(\\frac{2 E}{m}\\Big)]$$\n",
+    "$$\\Longrightarrow v^2 \\Big(1+ \\frac{1}{c^2}[\\frac{1}{m^2}\\Big(\\frac{2 E}{m}\\Big)] \\Big)= [\\frac{1}{m^2}\\Big(\\frac{2 E}{m}\\Big)]$$\n",
+    "\n",
+    "$$v= \\sqrt \\frac{[\\frac{1}{m^2}\\Big(\\frac{2 E}{m}\\Big)]}{1+ \\frac{1}{c^2}[\\frac{1}{m^2}\\Big(\\frac{2 E}{m}\\Big)]}$$\n",
+    "If E=1 MeV\n",
+    "$$ \\frac{1}{c^2}[\\frac{1}{m^2}\\Big(\\frac{2 \\times 1MeV}{m}\\Big)]= [c=1?!?!?]= \\frac{1}{(50 MeV)^2} \\times \\frac{2 MeV}{50 MeV}=0.000016 MeV^{-2} $$\n",
+    "\n",
+    "$$\\Longrightarrow v=0.004 (\\times c?)$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "17b19fd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#The upper converted into code:\n",
+    "Energy_of_bath=50    # MeV\n",
+    "mass_of_kindidate=50  #MeV\n",
+    "velocity_of_DM= np.sqrt((2*Energy_of_bath/mass_of_kindidate**3)/1+(2*Energy_of_bath/mass_of_kindidate**3))\n",
+    "velocity_of_DM\n",
+    "\n",
+    "# DM IS ALWAYS NON RELATIVISTIC WHEN DECOUPLE\n",
+    "# IN THE FOLLOWING COMPUTATION YOU SEE THAT THE KINETIC ENERGY IS NOT HIGH"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "f205bce4",
+   "id": "b5804ed0",
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccd14a2f",
+   "id": "e9e699d1",
    "metadata": {},
    "source": [
     "$$E_2 \\approx E_1= \\sqrt{m_1^2+ p_1^2}=\\sqrt{(0.05)^2+ (0.05 \\gamma 0.1c)^2}=\\sqrt{(0.05)^2+ (0.05 \\frac{1}{\\sqrt{1-(0.1)^2}} 0.1c)^2}$$"
@@ -1343,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "643de5a5",
+   "id": "206e42bc",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "31e19011",
+   "id": "1d1f2996",
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "cdef4d3f",
+   "id": "aba1631c",
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "9a110c9e",
+   "id": "1d3808d5",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1488,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "7e3f556a",
+   "id": "bff28319",
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "c4447db0",
+   "id": "c3c54bf4",
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09dda3c1",
+   "id": "e30417d0",
    "metadata": {},
    "source": [
     "$$1 \\text{cm}= 5.068 \\times 10^{13} \\hbar c \\cdot \\text{GeV}^{-1}\n",
@@ -1499,7 +1548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d515a9e5",
+   "id": "e31b228c",
    "metadata": {},
    "source": [
     "$$\\frac{cm^3}{s}=\\frac{(5.068 \\times 10^{13} \\hbar c \\cdot \\text{GeV}^{-1})^3}{1.519 \\times 10^{24} \\hbar \\cdot \\text{GeV}^{-1}}= 8.569432 \\times 10^{16} \\text{GeV}^{-2} $$"
@@ -1507,7 +1556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf3626ef",
+   "id": "3fd59da4",
    "metadata": {},
    "source": [
     "$$\\text{GeV}^{-2}=0.11669385 \\times 10^{-16} \\frac{cm^3}{s}= 1.1669385 \\times 10^{-17} \\frac{cm^3}{s}$$"
@@ -1516,7 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "90400ddb",
+   "id": "946fafce",
    "metadata": {},
    "outputs": [
     {
@@ -1536,7 +1585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0924ae9d",
+   "id": "c37bca43",
    "metadata": {},
    "source": [
     "$$\\langle \\sigma v \\rangle= 0.0005992953367809461 \\ \\text{GeV}^{-2}= 6.846779816983444 \\times 10^{-22} \\frac{cm^3}{s} $$"
@@ -1544,10 +1593,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3955a2b",
+   "id": "78716c97",
    "metadata": {},
    "source": [
     "## MAKE SENSE?!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "b3a9d8fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.223506202052889e+18"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(np.pi*(Mp**2)/45)"
    ]
   }
  ],
