--- a/iDM-freze-out/Coannihilation.ipynb
+++ b/iDM-freze-out/Coannihilation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "88961547",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "78a675e3",
    "metadata": {},
    "outputs": [],
@@ -51,9 +51,12 @@
     "    # I think we just have to consider the range of energies around the decoupling...\n",
     "    # the decoupling occur around x=14 and x=30 which is a range of temperatures of 3.5 MeV and 1.6 MeV\n",
     "    # recall that x=20 correspond to a T=2.5 MeV\n",
+    "    # In this range of temperature I have calulated the maximum energy available for the scattering\n",
+    "    # and created the relative s range\n",
     "    # Let's try now with: np.linspace(0.013960832263531195,0.014834245340895941,100)\n",
     "    # Those numbers are obtained from the evaluation of the maximum and minimum energy achievable\n",
     "    # for our DM canidates in that range of temperatures.\n",
+    "    # NOTE: I HAVENT CHANGED THE x1 RANGE, THEY ARE NOT ENTERING IN ANY CROSS SECTION OR WHATEVER\n",
     "    \n",
     "s=sample  #+s0                      #the lowest value for s is s0 (assuming velocities zeros)\n",
     "\n",
@@ -129,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "dcd95bcc",
    "metadata": {},
    "outputs": [
@@ -139,7 +142,7 @@
        "0.21661214442955293"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "3cf3bc44",
    "metadata": {},
    "outputs": [
@@ -201,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "c74f3416",
    "metadata": {},
    "outputs": [
@@ -221,6 +224,7 @@
     "# with 50 MeV velocity is 0.816496580927726       for m1=50 MeV\n",
     "# With 1 MeV velocity is 0.17277368511627203      for m2=(50*0.3)+50 MeV\n",
     "# with 50 MeV velocity is 0.778498944161523       for m2=(50*0.3)+50 MeV\n",
+    "# (Those are no longer valid. I have considered an other energy interval)\n",
     "\n",
     "# MAXIMUM ENERGY CASE\n",
     "\n",
