--- a/iDM-freze-out/approximations.ipynb
+++ b/iDM-freze-out/approximations.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8eadc9aa",
+   "execution_count": 56,
+   "id": "3b94c7da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,8 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "921c62a2",
+   "execution_count": 57,
+   "id": "4665a124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,31 +37,19 @@
     "\n",
     "\n",
     "s0= m1**2 + m2**2 + 2*m1*m2\n",
-    "sample=np.linspace(0.013960832263531195,0.014834245340895941,100)         # How can be its range?     ****up to 100 GeV\n",
-    "    \n",
-    "s=sample  #+s0                      #the lowest value for s is s0 (assuming velocities zeros)\n",
     "\n",
-    "s_che_va_dentro_sigma=s-s0\n",
     "\n",
     "epsilon=1E-3               # Has inside some factors as indicated in the computation papers     1E-4\n",
     "alpha_dark=1E-1               # what values?       (1E-3    -   1E-1)  \n",
     "alpha_em=1/137\n",
     "\n",
-    "\n",
-    "\n",
-    "pfin_pinit= (np.sqrt(abs(((s-2*m**2)**2)-4*(m**4))/abs(((s-(m1**2)-(m2**2))**2)-4*(m1**2)*(m2**2))))   # ratio pfinal over p initial\n",
-    "p_fin=np.sqrt((((s-2*m**2)**2)-4*(m**4))/4*s)        # p final\n",
-    "p_init=np.sqrt(abs((((s-(m1**2)-(m2**2))**2)-4*(m1**2)*(m2**2))/4*s))      # p initial had to add the\n",
-    "               #abs was inside the sqrt to keep it positive           #absolute value because the first elemnt gives a sqrt of negative\n",
-    "\n",
-    "E1= np.sqrt(m1**2 + p_init**2)\n",
-    "E2= np.sqrt(m2**2 + p_init**2)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "fe890bbc",
+   "execution_count": 58,
+   "id": "d1359534",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +58,7 @@
        "1.4101234699357789e-06"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,8 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "b3cfeb37",
+   "execution_count": 59,
+   "id": "17b99c6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "1cdce4c9",
+   "execution_count": 60,
+   "id": "a02a856d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,17 +91,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "ab1522f2",
+   "execution_count": 74,
+   "id": "23358a17",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1257f7af0>]"
+       "5.560003416264709e-10"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scattering(Tfo2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "3bec5c76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x125888370>]"
+      ]
+     },
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -134,8 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "7c0bd7c8",
+   "execution_count": 62,
+   "id": "f92e993c",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +153,7 @@
        "9.293719304636218e-17"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e939dd0",
+   "id": "164a0733",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -165,14 +174,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fe789dc",
+   "id": "77fc5218",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "100075ca",
+   "id": "2451f9c0",
    "metadata": {},
    "source": [
     "# Using those approximations now I am going to compute the thermal coannihilation cross section times velocity"
@@ -180,8 +189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "c00ae3c1",
+   "execution_count": 63,
+   "id": "0aa26030",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +199,7 @@
        "1.833030277982336"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,8 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "1116b68b",
+   "execution_count": 64,
+   "id": "11e3dd42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,8 +224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "6ee9641d",
+   "execution_count": 65,
+   "id": "7ce6e010",
    "metadata": {},
    "outputs": [
     {
@@ -247,8 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "b031bfad",
+   "execution_count": 66,
+   "id": "56044743",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +266,7 @@
        "1.4902743439025128e-32"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "56849834",
+   "execution_count": 67,
+   "id": "17d12106",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +289,7 @@
        "5.034066621967543e+25"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,8 +302,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "e3c239da",
+   "execution_count": 68,
+   "id": "0f630c04",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +312,7 @@
        "7.502140332214219e-07"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,8 +325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "4cefbcd8",
+   "execution_count": 69,
+   "id": "1b57b278",
    "metadata": {},
    "outputs": [
     {
@@ -326,22 +335,255 @@
        "8.754536386063565e-24"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "SIGMAVTERMAL*1.1669385*1E-17"
+    "SIGMAVTERMAL*1.1669385*1E-17      # result in cm^3/s "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "523f4ed9",
+   "id": "b8fad26e",
    "metadata": {},
    "source": [
     "### Close"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89a5536a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a1c09b0",
+   "metadata": {},
+   "source": [
+    "# Now is the decay time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "b9cf5ff5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.821970724139237e-43"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NUMERATOR_DECAY=integrate.quad(lambda s_tilda: decay*(s_tilda-s0)*np.sqrt(s_tilda)*special.kv(1,np.sqrt(s_tilda)/(Tfo2)), s0, np.inf )[0]    \n",
+    "\n",
+    "NUMERATOR_DECAY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "6b8d41ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.034066621967543e+25"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DENOMINATOR_DECAY= 1/(8* m1**2 * m2**2  *(Tfo2) *(special.kn(2,m1/Tfo2)*(special.kn(2,m2/Tfo2))))\n",
+    "\n",
+    "DENOMINATOR_DECAY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "38872ba1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.9444454984331714e-17"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SIGMAVTERMAL_DECAY=NUMERATOR_DECAY*DENOMINATOR_DECAY\n",
+    "\n",
+    "SIGMAVTERMAL_DECAY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "b72fab84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.769863813273358e-34"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SIGMAVTERMAL_DECAY*1.1669385*1E-17      # result in cm^3/s "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "468fdcce",
+   "metadata": {},
+   "source": [
+    "## Problems:\n",
+    "### -What masses do I need to use?\n",
+    "### -What temperatures do I need to use?\n",
+    "### -Why the approx of the decay is proportional to Delta?\n",
+    "### -The denominator ever change?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af8328b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a0c7933",
+   "metadata": {},
+   "source": [
+    "# Now is the scattering time\n",
+    "## This cross section depends on the temperature. But is refered to $\\chi_2$ so maybe I have tp use the temperature pf freeze-out of $\\chi_2$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "07bc0135",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.876031865242966e-36"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NUMERATOR_SCATTERING=integrate.quad(lambda s_tilda: scattering(Tfo2)*(s_tilda-s0)*np.sqrt(s_tilda)*special.kv(1,np.sqrt(s_tilda)/(Tfo2)), s0, np.inf )[0]    \n",
+    "\n",
+    "NUMERATOR_SCATTERING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "99291d09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.034066621967543e+25"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DENOMINATOR_SCATTERING= 1/(8* m1**2 * m2**2  *(Tfo2) *(special.kn(2,m1/Tfo2)*(special.kn(2,m2/Tfo2))))\n",
+    "\n",
+    "DENOMINATOR_SCATTERING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "713f3749",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.95803358824373e-10"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SIGMAVTERMAL_SCATTERING=NUMERATOR_SCATTERING*DENOMINATOR_SCATTERING\n",
+    "\n",
+    "SIGMAVTERMAL_SCATTERING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "b96b9cc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.451843278414756e-27"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SIGMAVTERMAL_SCATTERING*1.1669385*1E-17      # result in cm^3/s "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85e45a5c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
