--- a/iDM-freze-out/approximations.ipynb
+++ b/iDM-freze-out/approximations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "ff36d4a2",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "id": "6db485bb",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 31,
    "id": "7b588542",
    "metadata": {},
    "outputs": [
@@ -58,19 +58,26 @@
        "1.4101234699357789e-06"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# PAY ATTENTION:\n",
+    "# IT'S HIGHLY PROBABLE THAT THIS APPROXIMATION FOR THE CROSS SECTION\n",
+    "# COULD BE CONSIDERED ALREADY THE THERMAL AVERAGE CROSS SECTION TIMES VELOCITY!!\n",
+    "# IT'S THE FIRST ORDER OF EXPANSION OF THE CROSS SECTION, AND IS THE FIRST ORDER APPROXIMATION\n",
+    "# CONSIDERED BY THE THREE EXEPTION PAPER!!!\n",
+    "\n",
+    "\n",
     "coannihilation= (4*np.pi*(epsilon**2)*alpha_dark*alpha_em*((m1+m2)**2))/(((m1+m2)**2 - (mzprime**2))**2)\n",
     "coannihilation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 32,
    "id": "c90012ed",
    "metadata": {},
    "outputs": [],
@@ -80,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 33,
    "id": "2d753881",
    "metadata": {},
    "outputs": [],
@@ -91,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 34,
    "id": "5bc1b429",
    "metadata": {},
    "outputs": [
@@ -101,7 +108,7 @@
        "5.560003416264709e-10"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,17 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 35,
    "id": "094ef317",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x125888370>]"
+       "[<matplotlib.lines.Line2D at 0x12bc67e20>]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -143,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 36,
    "id": "199fda81",
    "metadata": {},
    "outputs": [
@@ -153,7 +160,7 @@
        "9.293719304636218e-17"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,12 +171,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c5336f7",
+   "cell_type": "markdown",
+   "id": "3f322bc0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Probably there is not necessare to integrate and get the termal average, because the first approximations still works as thermal averages"
+   ]
   },
   {
    "cell_type": "code",
@@ -189,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 37,
    "id": "b672bca1",
    "metadata": {},
    "outputs": [
@@ -199,7 +206,7 @@
        "1.833030277982336"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 38,
    "id": "de2a42fd",
    "metadata": {},
    "outputs": [],
@@ -224,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 39,
    "id": "4dd56abb",
    "metadata": {},
    "outputs": [
@@ -256,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 40,
    "id": "ca885547",
    "metadata": {},
    "outputs": [
@@ -266,7 +273,7 @@
        "1.4902743439025128e-32"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 41,
    "id": "04e811aa",
    "metadata": {},
    "outputs": [
@@ -289,7 +296,7 @@
        "5.034066621967543e+25"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 42,
    "id": "a5d94060",
    "metadata": {},
    "outputs": [
@@ -312,7 +319,7 @@
        "7.502140332214219e-07"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 43,
    "id": "7ea651ad",
    "metadata": {},
    "outputs": [
@@ -335,7 +342,7 @@
        "8.754536386063565e-24"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 44,
    "id": "42ff6562",
    "metadata": {},
    "outputs": [
@@ -380,7 +387,7 @@
        "9.821970724139237e-43"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 45,
    "id": "e89e177c",
    "metadata": {},
    "outputs": [
@@ -403,7 +410,7 @@
        "5.034066621967543e+25"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 46,
    "id": "ff603d75",
    "metadata": {},
    "outputs": [
@@ -426,7 +433,7 @@
        "4.9444454984331714e-17"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 47,
    "id": "3fab28af",
    "metadata": {},
    "outputs": [
@@ -449,7 +456,7 @@
        "5.769863813273358e-34"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 25,
    "id": "3d16bda4",
    "metadata": {},
    "outputs": [
@@ -499,7 +506,7 @@
        "5.876031865242966e-36"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 26,
    "id": "102adf3c",
    "metadata": {},
    "outputs": [
@@ -522,7 +529,7 @@
        "5.034066621967543e+25"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "id": "d4059005",
    "metadata": {},
    "outputs": [
@@ -545,7 +552,7 @@
        "2.95803358824373e-10"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 28,
    "id": "77e73099",
    "metadata": {},
    "outputs": [
@@ -568,7 +575,7 @@
        "3.451843278414756e-27"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,11 +586,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "6db2f147",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.95803358824373e-10"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2.95803358824373e-10"
+   ]
   }
  ],
  "metadata": {
