--- a/iDM-freze-out/Coannihilation.ipynb
+++ b/iDM-freze-out/Coannihilation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "88961547",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "78a675e3",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "dcd95bcc",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "0.21661214442955293"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3cf3bc44",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c74f3416",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "b5ad1cef",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "       0.01479896, 0.01480778, 0.0148166 , 0.01482542, 0.01483425])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "7c134a97",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "453b5436",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "0.013225"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "65903e85",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "445ee178",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
        "       0.04268986, 0.04441054, 0.04620057, 0.04806276, 0.05      ])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "d4135fc3",
    "metadata": {},
    "outputs": [],
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "e54a4280",
    "metadata": {},
    "outputs": [],
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "30f3f290",
    "metadata": {},
    "outputs": [],
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "e5fe4519",
    "metadata": {},
    "outputs": [
@@ -567,7 +567,7 @@
        "6.709447953608789e-07"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "9e72b8e8",
    "metadata": {},
    "outputs": [
@@ -588,7 +588,7 @@
        "0.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "f7ccd2c3",
    "metadata": {},
    "outputs": [
@@ -609,7 +609,7 @@
        "78.73215000558993"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
+   "id": "200dfd32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/w2/vjpbmwkj10s_w78j4p9hxlyh0000gn/T/ipykernel_16351/2708496571.py:2: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  return ((8*np.pi*(epsilon**2)*alpha_dark*alpha_em)/(((s_tilda)-mzprime**2)**2))*(pfin_pinit(s_tilda)/(s_tilda))*(((s_tilda)*E1(s_tilda)*E2(s_tilda)/2)+(2*(p_init(s_tilda)**2)*(p_fin(s_tilda)**2)/3)+((m**2)*((s_tilda)-(m1**2)-(m2**2))/2)+((m1*m2)*((s_tilda)-2*(m**2))/2)+((m**2)*m1*m2))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigma(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "b723a88f",
    "metadata": {},
    "outputs": [
@@ -647,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "ced5eef6",
    "metadata": {},
    "outputs": [
@@ -1302,11 +1331,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "26c1e77b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "inf"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "special.kn(2,0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1330,19 +1372,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96da7a37",
+   "id": "cc7f4c2d",
    "metadata": {},
    "source": [
-    "### I have shifted the s0 because 'sigma(s0)' is WAY more different (7 order of magnitude) respect to a value nearby and still into the range (s0, Energy max) .\n",
-    "### Energy max is (E1+E2)^2 considering the max velocity for iDM of 0.1c \n",
-    "### The shift is of 0.00003........ Can we make a better assumption?\n",
-    "### Actually I don't think that consider s0=(m1+m2)^2 is a great assumption. \n",
-    "### How could be possible that the two iDM candidate find themself at rest?!?!"
+    "# What is $\\sigma_0= \\langle \\sigma v \\rangle_0$?\n",
+    "# Is the cross section computed in $s_0$?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "id": "59a93587",
    "metadata": {},
    "outputs": [
@@ -1352,7 +1391,7 @@
        "1.0862508931871369"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1404,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
+   "id": "325745bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.013225\n",
+      "0.013225\n",
+      "0.013225\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s0)\n",
+    "print(m1**2+m2**2+2*m1*m2)\n",
+    "print((m1+m2)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "94431b47",
    "metadata": {},
    "outputs": [
@@ -1375,7 +1436,7 @@
        "1.5720277332653604e-09"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1387,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "id": "83876b3e",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1458,7 @@
        "78.73215000558993"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,28 +1469,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "id": "27b8b251",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.2034695407871374"
+       "113597572.73301005"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pfin_pinit(s0+0.03)"
+    "pfin_pinit(s0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
+   "id": "a89cc778",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.930795096356081e-07"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# WHAT IF I DIVIDE THE CROSS SECTION FOR THE WRONG TERM THAT SPOILS THE VALUE?\n",
+    "# AS IF P_FIN/P_INIT WOULD BE EQUAL TO ONE\n",
+    "\n",
+    "sigma(s0)/pfin_pinit(s0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "b6119533",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0007604086343371401"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_fin(s0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6d05abec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.693881005048752e-12"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_init(s0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "26b50e44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "113597572.73301005"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_fin(s0)/p_init(s0)   # This term fuck up everithing in the cross section computed in s0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "0e85f501",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22.259027302459412"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log(0.038*1.086*Mp*m2*6.930795096356081e-07)- (0.5)*np.log(np.log(0.038*1.086*Mp*m2*6.930795096356081e-07))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "de768382",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.002272500536630569"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1/(np.log(0.038*1.086*Mp*m1*6.930795096356081e-07)- (0.5)*np.log(np.log(0.038*1.086*Mp*m1*6.930795096356081e-07)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "85f1fbe7",
    "metadata": {},
    "outputs": [
@@ -1458,7 +1648,7 @@
        "       0.01479896, 0.01480778, 0.0148166 , 0.01482542, 0.01483425])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,17 +1667,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 39,
    "id": "f46a6860",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.104085836784813e-06"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "number=0.01483425"
+    "number=0.01483425\n",
+    "sigma(number)\n",
+    "sigmazero(number)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 38,
    "id": "a8b8ae52",
    "metadata": {},
    "outputs": [],
@@ -1821,6 +2024,8 @@
     "## The centre of mass energy arrives at maximum at 148 MeV, and I do not have considered the presence of hadrons.... I just considered the presence of electrons and muons, but this could be changed, is basically just a factor 2 multiplying the muon cross section \"R(s)\".\n",
     "\n",
     "## The freeze-out x now are around 24 and 25, which is good. \n",
+    "\n",
+    "## THE INTEGRATION IS STILL FROM $s_0$ TO INFINITY OF THE NORMAL $\\sigma(s)$ \n",
     "\n",
     "## The choice of the temperatures values in the Bessel functions are crucial. The freeze-out x are almost the same, but the real temperature of freeze-out are VERY different because the difference of masses, and are: 2.6 MeV and 2 MeV for the two spieces.\n",
     "## So I decided to take an average of the temperature, for the numerator and the denominator\n",
