--- a/iDM-freze-out/approximations.ipynb
+++ b/iDM-freze-out/approximations.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "6db485bb",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "7b588542",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
        "1.4101234699357789e-06"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "c90012ed",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "2d753881",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
+   "id": "9b1bfeb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.247433714688533e-05"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scattering=(16*np.pi*(epsilon)**2)*alpha_dark*alpha_em/mzprime**4\n",
+    "scattering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "5bc1b429",
    "metadata": {},
    "outputs": [
@@ -108,7 +130,7 @@
        "5.560003416264709e-10"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,17 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "094ef317",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x12bc67e20>]"
+       "[<matplotlib.lines.Line2D at 0x125d1d3a0>]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -150,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "199fda81",
    "metadata": {},
    "outputs": [
@@ -160,7 +182,7 @@
        "9.293719304636218e-17"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "b672bca1",
    "metadata": {},
    "outputs": [
@@ -206,7 +228,7 @@
        "1.833030277982336"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "de2a42fd",
    "metadata": {},
    "outputs": [],
@@ -231,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "4dd56abb",
    "metadata": {},
    "outputs": [
