--- a/iDM-freze-out/Coannihilation.ipynb
+++ b/iDM-freze-out/Coannihilation.ipynb
@@ -2103,6 +2103,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4d8c1c99",
+   "metadata": {},
+   "source": [
+    "# Everithing changed again:\n",
+    "\n",
+    "# I have used the approximate coannihilation cross section (value=1.4e-6) that is available in the \"approximation\" notebook and used as $\\sigma_0$ to plug in the $x_f$ computation to find values for the decoupling temperatures of the two spieces.\n",
+    "\n",
+    "# The rest instead follows the proper rules. I integrate the whole $\\int_{s_0}^{\\infty} \\sigma(s)(s-s_0)\\sqrt{s}K_1(\\sqrt{s}/T)$ and get a result. And then computed the denominator. The temperature used is the same for every Bessel function and is the freeze-out temperature of the second spieces $\\chi_2$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
    "id": "b3a9d8fe",
