--- a/iDM-freze-out/Scattering.ipynb
+++ b/iDM-freze-out/Scattering.ipynb
@@ -22,9 +22,13 @@
    "id": "65ad2f54",
    "metadata": {},
    "source": [
-    "# Here you try to do again all the energy stuff computation, but it's not needed, because the cross section that is responsible for the freeze-out is just the coannihilation one. So there is no point in computing the \"energy range\". You just need to integrate it and that's it.\n",
+    "# Here you try to do again all the energy stuff computation, but it's not needed, because the cross section that is responsible for the freeze-out is just the coannihilation one. So there is no point in computing the \"energy range\" becuause is already setted. You just need to integrate it and that's it.\n",
     "\n",
-    "# By the way the cross section is of the same order of magnitude of what comes out just with the approximation."
+    "# Everything is known, also the freeze-out temperature for the spieces.\n",
+    "\n",
+    "# The only thing to do in this notebook is the integration of the scattering sigma from the new $s_0$ to infinity. The temperature of reference is the freeze-out temperature for the second DM spiece.\n",
+    "\n",
+    "# By the way the thermal average cross section obtained is of the same order of magnitude of what comes out just with the first order approximation."
    ]
   },
   {
