--- a/iDM-freze-out/Scattering.ipynb
+++ b/iDM-freze-out/Scattering.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "7c134a97",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "8b2f2caa",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
        "491808569.15578955"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "453b5436",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
        "0.0025503510010000006"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "65903e85",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "445ee178",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
        "       0.04268986, 0.04441054, 0.04620057, 0.04806276, 0.05      ])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "d4135fc3",
    "metadata": {},
    "outputs": [],
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "324c4913",
    "metadata": {},
    "outputs": [],
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "id": "1d3808d5",
    "metadata": {},
    "outputs": [
@@ -1449,7 +1449,7 @@
        "1.7242743016579734e-22"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1472,17 +1472,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "id": "bff28319",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9291453880143.586"
+       "1.563993475866895e+17"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1490,7 +1490,7 @@
    "source": [
     "# Let me try to use mf and his freezeout temperature\n",
     "\n",
-    "DENOMINATOR= 1/(8* m1**2 * m2**2  *Tfo2 *(special.kn(2,m1/Tfo2)*(special.kn(2,mf/Tfo2))))\n",
+    "DENOMINATOR= 1/(8* m1**2 * mf**2  *Tfo2 *(special.kn(2,m1/Tfo2)*(special.kn(2,mf/Tfo2))))\n",
     "\n",
     "DENOMINATOR\n",
     "\n",
@@ -1505,17 +1505,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "id": "c3c54bf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.602101515057185e-09"
+       "2.696753758398017e-05"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1556,17 +1556,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "946fafce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.255450231327842e-34"
+       "3.1469457856943447e-22"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
