--- a/iDM-freze-out/iDM freeze-out-integration.ipynb
+++ b/iDM-freze-out/iDM freeze-out-integration.ipynb
@@ -1136,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "4550e685",
+   "id": "230c5862",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "05c46fe9",
+   "id": "b3b6f920",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1186,7 +1186,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "f4f0962c",
+   "id": "f3e8b1fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "da97297a",
+   "id": "25a83b2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "ecbd5f74",
+   "id": "5acd6634",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "707b561b",
+   "id": "07ce4c97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "cd5f5d80",
+   "id": "b87d89bd",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "faf878b8",
+   "id": "f6e2fd52",
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "6fa94e97",
+   "id": "906a0b1c",
    "metadata": {},
    "outputs": [
     {
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a58c1bb1",
+   "id": "f4a188bb",
    "metadata": {},
    "source": [
     "# I am going to insert the integral inside the differential equation....\n",
@@ -1804,12 +1804,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4da95c38",
+   "id": "ef152d63",
    "metadata": {},
    "source": [
     "# UPDATE 21/12/2022\n",
-    "# I HAVE INSERT INSIDE THE DIFFERENTIAL EQUATION THE WHOLE FORMULA FOR THE $\\langle \\sigma v \\rangle$ WITH THE INTEGRAL WITHOUT CHOOSING A VALUE FOR THE TEMPERATURE OF FREEZE-OUT. THE TERMAL AVERAGE INTEGRAL IS PERFORMED IN $ds$ WHILE THE INTEGRATION OF THE DIFFERENTIAL EQUATION IS DONE IN $dx$ THAT DEPEND ON T AS $dx=m/dT$. SO THERE IS NO NEED TO PICK A CHOOSE FOR THE FREEZEOUT TEMPERATURE. \n",
-    "# THIS HAS BEEN DONE FOR THE COANNIHILATION AND THE SCATTERING CROSS SECTION, BECAUSE I HAVE A N ANALYTICAL VALUE FOR THAT. SHOULD BE PERFORMED ALSO FOR THE DECAY...... AND THEN WE ARE GOOD.\n",
+    "# I HAVE INSERT INSIDE THE DIFFERENTIAL EQUATION THE WHOLE FORMULA FOR THE $\\langle \\sigma v \\rangle$ WITH THE INTEGRAL WITHOUT CHOOSING A VALUE FOR THE TEMPERATURE OF FREEZE-OUT.\n",
+    "$$\\langle \\sigma v \\rangle = \\frac{1}{8 m_1^2m_2^2TK_2(m_1/T)K_2(m_2/T)} \\int_{s_0}^{\\infty} \\sigma({s}-s_0)\\sqrt{{s}}K_1(\\sqrt{{s}}/T)ds$$\n",
+    "# I HAVE USED THIS FORMULA INSIDE THE BOLTZMAN EQUATION.\n",
+    "# THE TERMAL AVERAGE INTEGRAL IS PERFORMED IN $ds$ WHILE THE INTEGRATION OF THE DIFFERENTIAL EQUATION IS DONE IN $dx$ THAT DEPEND ON T AS $dx=m/dT$. SO THERE IS NO NEED TO PICK A CHOOSE FOR THE FREEZEOUT TEMPERATURE. \n",
+    "# THIS HAS BEEN DONE FOR THE COANNIHILATION AND THE SCATTERING CROSS SECTION, BECAUSE I HAVE A NANALYTICAL VALUE FOR THEM. SHOULD BE PERFORMED ALSO FOR THE DECAY...... AND THEN WE ARE GOOD.\n",
     "# MOREOVER ACCORDING TO GORDAN THE $x_f$ FORMULA OF THE KOLB-TURNER IS NO LONGER VALID FOR THE iDM CASE. IN THIS WAY I AM ABLE TO SOLVE THE TWO DIFFERENTIAL EQUATION WITHOUT PICKING A VALUE FOR THE FREEZE-OUT BEFORE SOLVING IT.\n",
     "# In the following box is reported the equation that has been integrated"
    ]
@@ -1817,7 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e00a2e6",
+   "id": "47daf724",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1834,18 +1837,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6380aa23",
+   "id": "057c4aa6",
    "metadata": {},
    "source": [
     "# NEXT STEPS:\n",
-    "# USE YOUR CROSS SECTION FOR THE ANNIHILATION i.e. WITH A FACTOR 2 IN FRONT...\n",
-    "# UNDERSTAND HOW TO GET AN ANALYTICAL FORMULA FOR THE DECAY CROSS SECTION AND PLUG IT IN, THEN.. DONE, THE WORK IS CONCLUDED AND THE RESULT SHOULD MATCH GORDAN'S PAPER.\n",
+    "# USE my CROSS SECTION FOR THE ANNIHILATION i.e. WITH A FACTOR 2 IN FRONT...\n",
+    "# UNDERSTAND HOW TO GET AN ANALYTICAL FORMULA FOR THE DECAY CROSS SECTION AND PLUG IT IN, THEN.. DONE, THE WORK IS CONCLUDED AND THE RESULT SHOULD MATCH GORDAN'S PAPER (in principle).\n",
     "\n",
     "\n",
     "# NEXT NEXT STEP:\n",
     "# MODIFY THE BOLTZMAN EQUATION AGAIN AND PLUG INSIDE A NEW TERM FOR $\\chi_1 \\chi_1$ AND $\\chi_2 \\chi_2$ ANNIHILATION CROSS SECTION VIA THE SCALAR. THE SCALAR INTERACTION IS DIAGONAL, SO I NEED TO ADD AN EXTRA TERM TO THE BOLTZMAN EQUATION WHICH IS:\n",
     "$$- \\frac{\\lambda_A^{11,22}}{x^2} \\Big[Y_{1,2}^2- (Y_{1,2}^0)^2 \\Big]$$\n",
-    "# AND THE BOLTZMAN EQUATION BECOMES:\n",
+    "# AND THE BOLTZMAN EQUATION FOR iDM WITH SCALAR AND DARK PHOTON MEDIATORS BECOMES:\n",
     "$$ \\frac{dY_{1,2}}{dx} = - \\frac{\\lambda_A^{1,2}}{x^2} \\Big[ Y_1 Y_2 - Y_1^{(0)}Y_2^{(0)} \\Big] - \\frac{\\lambda_A^{11,22}}{x^2} \\Big[Y_{1,2}^2- (Y_{1,2}^0)^2 \\Big] \\pm x \\lambda_D \\Big( Y_2- \\frac{Y_2^{(0)}}{Y_1^{(0)}}Y_1 \\Big) \\pm \\frac{\\lambda_S}{x^2}Y_f^{(0)} \\Big( Y_2- \\frac{Y_2^{(0)}}{Y_1^{(0)}}Y_1 \\Big) $$"
    ]
   },
@@ -1944,7 +1947,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "137b9d43",
+   "id": "e446ba45",
    "metadata": {},
    "outputs": [],
    "source": [
