--- a/iDM-freze-out/iDM freeze-out-integration.ipynb
+++ b/iDM-freze-out/iDM freeze-out-integration.ipynb
@@ -1136,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "230c5862",
+   "id": "eee02140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "b3b6f920",
+   "id": "693a50e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1186,7 +1186,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "f3e8b1fa",
+   "id": "a7dddf9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "25a83b2a",
+   "id": "3da38c5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "5acd6634",
+   "id": "0cd4c894",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "07ce4c97",
+   "id": "008a65f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "b87d89bd",
+   "id": "99eda2f3",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "f6e2fd52",
+   "id": "5193d509",
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "906a0b1c",
+   "id": "25265328",
    "metadata": {},
    "outputs": [
     {
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4a188bb",
+   "id": "4caa795d",
    "metadata": {},
    "source": [
     "# I am going to insert the integral inside the differential equation....\n",
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef152d63",
+   "id": "1f779fab",
    "metadata": {},
    "source": [
     "# UPDATE 21/12/2022\n",
@@ -1820,7 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47daf724",
+   "id": "8d68ef7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1830,6 +1830,26 @@
     "    #Y1, Y2=z\n",
     "    #return [-(quantity*(integrate.quad(lambda s_tilda: sigma(s_tilda)* (s_tilda-s0)* np.sqrt(s_tilda)* special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0, np.inf )[0])*( 1/(8* m1**2 * m2**2  *(m1/t) *(special.kn(2,m1/(m1/t))*(special.kn(2,m2/(m1/t)))))) )*m1*(Y1*Y2-Yequil(t,m1)*Yequil(t2,m2))/t**2 + ((quantity*(integrate.quad(lambda s_tilda: sigma_SCAT(s_tilda)* (s_tilda-s0_SCAT)* np.sqrt(s_tilda)* special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0_SCAT, np.inf )[0])*( 1/(8* m1**2 * mf**2  *(m1/t) *(special.kn(2,m1/(m1/t))*(special.kn(2,mf/(m1/t)))))) ))  *m1*Yequil(t,m1)*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1)/t**2 + t*kd*m1*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1),    -(quantity*(integrate.quad(lambda s_tilda: sigma(s_tilda)* (s_tilda-s0)* np.sqrt(s_tilda)* special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0, np.inf )[0])*( 1/(8* m1**2 * m2**2  *(m1/t) *(special.kn(2,m1/(m1/t))*(special.kn(2,m2/(m1/t)))))) )*m2*(Y1*Y2-Yequil(t,m1)*Yequil(t2,m2))/t**2 -  (quantity*(integrate.quad(lambda s_tilda: sigma_SCAT(s_tilda)* (s_tilda-s0_SCAT)* np.sqrt(s_tilda)* special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0_SCAT, np.inf )[0])*( 1/(8* m1**2 * mf**2  *(m1/t) *(special.kn(2,m1/(m1/t))*(special.kn(2,mf/(m1/t)))))) )  *m2*Yequil(t2,m2)*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1)/t**2 - t*kd*m2*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1)]       \n",
     "\n",
+    "    \n",
+    "    # I'll rewrite it here andando a capo:\n",
+    "    # #return [-(quantity*(integrate.quad(lambda s_tilda: sigma(s_tilda)* (s_tilda-s0)* np.sqrt(s_tilda)* \n",
+    "    # special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0, np.inf )[0])*( 1/(8* m1**2 * m2**2  *(m1/t) \n",
+    "    # *(special.kn(2,m1/(m1/t))*(special.kn(2,m2/(m1/t)))))) )*m1*(Y1*Y2-Yequil(t,m1)*Yequil(t2,m2))/t**2 \n",
+    "    # + ((quantity*(integrate.quad(lambda s_tilda: sigma_SCAT(s_tilda)* (s_tilda-s0_SCAT)* np.sqrt(s_tilda)* \n",
+    "    # special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0_SCAT, np.inf )[0])*( 1/(8* m1**2 * mf**2  *(m1/t) \n",
+    "    # *(special.kn(2,m1/(m1/t))*(special.kn(2,mf/(m1/t)))))) ))  *m1*Yequil(t,m1)*(Y2-(Yequil(t2,m2)/Yequil(t,m1))\n",
+    "    # *Y1)/t**2 + t*kd*m1*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1),    \n",
+    "    # -(quantity*(integrate.quad(lambda s_tilda: sigma(s_tilda)* (s_tilda-s0)* np.sqrt(s_tilda)* \n",
+    "    # special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0, np.inf )[0])*( 1/(8* m1**2 * m2**2  *(m1/t) \n",
+    "    # *(special.kn(2,m1/(m1/t))*(special.kn(2,m2/(m1/t)))))) )*m2*(Y1*Y2-Yequil(t,m1)*Yequil(t2,m2))/t**2 -  \n",
+    "    # (quantity*(integrate.quad(lambda s_tilda: sigma_SCAT(s_tilda)* (s_tilda-s0_SCAT)* np.sqrt(s_tilda)* \n",
+    "    # special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0_SCAT, np.inf )[0])*( 1/(8* m1**2 * mf**2  *(m1/t) \n",
+    "    # *(special.kn(2,m1/(m1/t))*(special.kn(2,mf/(m1/t)))))) )  *m2*Yequil(t2,m2)*(Y2-(Yequil(t2,m2)/Yequil(t,m1))\n",
+    "    # *Y1)/t**2 - t*kd*m2*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1)]       \n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n",
     "# where the decay average cross section is:\n",
     "#kd=fk(sigmav=2.7897359041010654e-17)\n",
     "#************************************************************"
@@ -1837,7 +1857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "057c4aa6",
+   "id": "a5fa4cdc",
    "metadata": {},
    "source": [
     "# NEXT STEPS:\n",
@@ -1947,7 +1967,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "e446ba45",
+   "id": "1818bfdf",
    "metadata": {},
    "outputs": [],
    "source": [
